@@ -1,3 +1,9 @@
+2002-04-27  Werner Koch  <wk@gnupg.org>
+
+	* cms.c (read_and_hash_cont): Handle constructed octet strings.
+	* cms-parser.c (_ksba_cms_parse_signed_data_part_2): Eat one
+	pending end tag.
+
 2002-04-15  Werner Koch  <wk@gnupg.org>
 
 	* version.c: New.
